--- a/sass/components/_switch-mode.scss
+++ b/sass/components/_switch-mode.scss
@@ -1,5 +1,5 @@
 .switch-mode {
-    position: absolute;
+    position: fixed;
     z-index: 3;
     bottom: 1rem; left: 1.5rem;
     padding: 0.2rem;
