--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,12 +1,16 @@
 header {
     position: absolute;
     top: 0; left: 0;
-    z-index: 2;
+    z-index: 3;
     isolation: isolate;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
+    @include small-screens {
+        height: 5rem;
+        min-height: max-content;
+    }
     .profile {
         display: flex;
         flex-direction: column;
@@ -14,7 +18,7 @@ header {
         align-items: center;
         gap: 1rem;
         height: 100%;
-        width: 20vw;
+        width: 17rem;
         padding: 2rem 2rem 4rem 2rem;
         background-color: var(--bg-grey);
         @include box-shadow;
@@ -38,6 +42,31 @@ header {
         }
         &:hover img, &:focus img {
             filter: none;
+        }
+        @include small-screens {
+            position: relative;
+            width: 100vw;
+            flex-direction: row;
+            justify-content: flex-start;
+            padding: 1rem;
+            img {
+                @include circle(5rem, 1rem);
+                margin-bottom: 0;
+                margin-left: -2.3rem;
+                filter: none;
+            }
+            h1, h2 {
+                width: auto;
+            }
+            .profile-contact {
+                display: none;
+            }
+            .btn-nav {
+                position: absolute;
+                top: 50%;
+                margin-top: -0.6rem;
+                right: 1rem;
+            }
         }
     }
     nav {
