--- a/sass/layout/sections/_portfolio.scss
+++ b/sass/layout/sections/_portfolio.scss
@@ -1,41 +1,41 @@
 #portfolio {
     flex-direction: row;
+    @include small-screens {
+        flex-direction: column;
+    }
     .btns {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        gap: 1.5rem;
+        gap: 1rem;
+        @include small-screens {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
     }
     .project {
-        position: relative;
         display: none;
-        justify-content: space-between;
+        gap: 3rem;
+        justify-content: flex-end;
         width: 100%;
-        border-radius: 0.5rem;
-        background-color: var(--bg-grey);
-        @include box-shadow;
-        overflow: hidden;
-        &-img {
-            position: relative;
-            z-index: 1;
-            min-width: 63%;
-            max-width: 63%;
-            margin: 0.5rem;
-            border-radius: 0.5rem;
-            box-shadow: 0 0 1px $color-shadow;
-            transform: translateX(0);
-            transition: 250ms ease-in-out;
-            &.hidden {
-                transform: translateX(-105%);
-            }
+        @include small-screens {
+            flex-direction: column;
         }
         &-main {
-            position: relative;
+            background-color: var(--bg-grey);
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            width: 100%;
+            gap: 2rem;
+            width: 28%;
             padding: 2rem;
+            margin: 0.5rem;
+            border-radius: 1.5rem;
+            @include box-shadow;
             overflow: hidden;
+            @include small-screens {
+                width: 100%;
+            }
             &-type {
                 margin-right: -2rem;
                 margin-left: auto;
@@ -53,19 +53,35 @@
                 gap: 1rem;
             }
         }
+        &-switch {
+            position: relative;
+            width: 62%;
+            height: min-content;
+            border-radius: 1.5rem;
+            @include box-shadow;
+            overflow: hidden;
+            @include small-screens {
+                width: 100%;
+            }
+            img {
+                width: 100%;
+                border-radius: 1.5rem;
+            }
+        }
         &-details {
             position: absolute;
-            top:0; bottom:0; left:0;
-            width: 63%;
+            inset: 0;
             display: flex;
             flex-direction: column;
             gap: 1.5rem;
             padding: 2rem;
-            overflow: scroll;
-            -ms-overflow-style: none;
-            scrollbar-width: none;
-            &::-webkit-scrollbar {
-                display: none;
+            border-radius: 1.5rem;
+            background-color: var(--bg-grey);
+            transform-origin: center right;
+            transform: scaleX(0%);
+            transition: 250ms ease-in-out;
+            @include small-screens {
+                width: 100%;
             }
             &-skills {
                 position: relative;
@@ -86,6 +102,17 @@
                     background-color: $portfolio-dark;
                     color: $portfolio-light;
                 }
+            }
+            p {
+                overflow: scroll;
+                -ms-overflow-style: none;
+                scrollbar-width: none;
+                &::-webkit-scrollbar {
+                    display: none;
+                }
+            }
+            &.active {
+                transform: scaleX(100%);
             }
         }
         &.active {
