--- a/sass/layout/_home.scss
+++ b/sass/layout/_home.scss
@@ -34,6 +34,8 @@
             height: 100%;
         }
         a {
+            position: relative;
+            z-index: 1;
             height: 100%;
             width: 100vw;
             border-radius: 0;
