mobile: improved #career, no intersection observer js, no scroll

--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -9,6 +9,9 @@ main {
     }
     scroll-snap-type: y proximity;
     scroll-behavior: smooth;
+    @include small-screens {
+        scroll-snap-type: none;
+    }
     .section {
         display: flex;
         flex-direction: column;
