--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,11 +2,11 @@ header {
     position: absolute;
     top: 0; left: 0;
     z-index: 3;
-    isolation: isolate;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
+    animation: slide-from-left 550ms ease 50ms backwards;
     @include small-screens {
         height: 5rem;
         min-height: max-content;
@@ -24,24 +24,20 @@ header {
         @include box-shadow;
         transition: width $middle-trans ease-in 250ms;
         img {
+            width: 13rem;
+            height: 13rem;
+            border-radius: 50%;
             @include box-shadow;
             margin-bottom: 1rem;
-            filter: grayscale(100%);
         }
         h1, h2, .profile-contact {
             width: 100%;
         }
         .profile-contact {
             margin-left: -1rem;
-            a:hover, a:focus {
-                box-shadow: none;
-            }
         }
         img, h1, h2, .profile-contact {
             transition: opacity $short-trans ease-in-out 650ms;
-        }
-        &:hover img, &:focus img {
-            filter: none;
         }
         @include small-screens {
             position: relative;
@@ -50,22 +46,16 @@ header {
             justify-content: flex-start;
             padding: 1rem;
             img {
-                @include circle(5rem, 1rem);
+                width: 5rem;
+                height: 5rem;
                 margin-bottom: 0;
                 margin-left: -2.3rem;
-                filter: none;
             }
             h1, h2 {
                 width: auto;
             }
             .profile-contact {
                 display: none;
-            }
-            .btn-nav {
-                position: absolute;
-                top: 50%;
-                margin-top: -0.6rem;
-                right: 1rem;
             }
         }
     }
@@ -77,7 +67,7 @@ header {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        gap: 1.5rem;
+        gap: 0.2rem;
         height: 100%;
         width: 6rem;
         padding-bottom: 4rem;
@@ -85,29 +75,7 @@ header {
         @include box-shadow;
         opacity: 0;
         transition: opacity $short-trans ease-in-out;
-        a {
-            position: relative;
-            &:hover span, &:focus span {
-                transform: translateX(0);
-                transition: transform $short-trans ease-in-out;
-            }
-        }
-        span {
-            position: absolute;
-            z-index: -1;
-            top: 0;
-            left: 4rem;
-            width: max-content;
-            max-width: 6rem;
-            word-break: break-all;
-            font-size: 1rem;
-            padding: 0.6rem;
-            background-color: inherit;
-            color: inherit;
-            border-radius: 0 0.5rem 0.5rem 0;
-            opacity: 0;
-            transform: translatex(-6rem);
-        }
+        overflow: hidden;
     }
     &.narrowed {
         .profile {
@@ -116,17 +84,12 @@ header {
             img, h1, h2, .profile-contact {
                 opacity: 0;
                 transition: opacity $short-trans ease-in-out 100ms;
-                filter: none;
             }
         }
         nav {
             z-index: auto;
             opacity: 1;
-            transition: opacity $short-trans ease-in-out 800ms;
-            span {
-                opacity: 1;
-                transition: opacity 0ms ease-in-out 1000ms;
-            }
+            transition: opacity 300ms ease-in-out 500ms;
         }
     }
 }
