--- a/sass/utils/_keyframes.scss
+++ b/sass/utils/_keyframes.scss
@@ -1,40 +1,17 @@
-@keyframes jump {
+@keyframes slide-from-left {
     0% {
-        transform: translateY(0%) scaleX(102%) scaleY(98%);
-    }
-    2% {
-        transform: translateY(0%) scaleX(102%) scaleY(98%);
-    }
-    50% {
-        transform: translateY(-8%) scaleX(99%) scaleY(101%);
-    }
-    98% {
-        transform: translateY(0%) scaleX(102%) scaleY(98%);
+        transform: translateX(-100%);
     }
     100% {
-        transform: translateY(0%) scaleX(102%) scaleY(98%);
+        transform: translateX(0%);
     }
 }
 
-@keyframes ball-shadow {
+@keyframes appear-opacity {
     0% {
-        transform: scale(100%);
-        opacity: 1;
-    }
-    2% {
-        transform: scale(100%);
-        opacity: 1;
-    }
-    50% {
-        transform:scale(110%);
-        opacity: 0.5;
-    }
-    98% {
-        transform: scale(100%);
-        opacity: 1;
+        opacity: 0;
     }
     100% {
-        transform: scale(100%);
         opacity: 1;
-    }   
+    }
 }
