--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,43 +1,43 @@
 @import url('https://fonts.googleapis.com/css2?family=Krub:wght@200;300;400;500;600;700&family=Oxygen:wght@300;400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Bangers&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Nova+Square&family=Peralta&family=Rowdies:wght@300&family=Train+One&display=swap');
 
-html {
-    font-family: "Oxygen", 'Lucida Sans', 'Verdana';
-    color: var(--text-grey);
-}
-
-p, quote {
+.text, quote, p, li {
     font-family: "Krub", Georgia, serif;
     text-align: justify;
     font-size: 1.1rem;
     line-height: 1.4rem;
 }
 
-h1 {
-    font-size: 1.6rem;
-    font-weight: 700;
+h1, .h1 {
+    font-family: "Oxygen", 'Lucida Sans', 'Verdana';
     text-transform: uppercase;
+    font-size: 1.4rem;
+    font-weight: 700;
 }
 
-h2 {
-    font-size: 1.4rem;
+h2, h3, .h3, nav a {
+    font-family: "Oxygen", 'Lucida Sans', 'Verdana';
+    text-transform: uppercase;
+    font-size: 1.1rem;
     font-weight: 400;
 }
 
-h3, .h3 {
-    font-size: 1.3rem;
-    font-weight: 700;
-}
-
-h4 {
-    font-size: 1.2rem;
+h4, .h4 {
+    font-family: "Oxygen", 'Lucida Sans', 'Verdana';
+    font-size: 1.1rem;
     font-weight: 400;
 }
 
 h5, .h5 {
+    font-family: "Oxygen", 'Lucida Sans', 'Verdana';
+    text-transform: uppercase;
     font-size: 1rem;
-    font-weight: 700;
+    font-weight: 400;
+}
+
+#portfolio li {
+    font-family: "Oxygen", 'Lucida Sans', 'Verdana';
+    font-size: 1rem;
+    font-weight: 300;
 }
 
 .bold {
@@ -45,19 +45,7 @@ h5, .h5 {
 }
 
 .light {
-    opacity: 0.7;
-}
-
-.light-uppercase {
-    font-size: 1.1rem;
     font-weight: 300;
-    text-transform: uppercase;
-}
-
-.normal-uppercase {
-    font-size: 1.1rem;
-    font-weight: 400;
-    text-transform: uppercase;
 }
 
 .cv-content {
@@ -69,21 +57,5 @@ h5, .h5 {
     h4 {
         text-transform: uppercase;
         font-weight: 600;
-    }
-}
-
-#refer {
-    a {
-        margin-left: 0.5rem;
-    }
-}
-
-#contact {
-    p {
-        line-height: 2rem;
-        text-align: center;
-    }
-    span {
-        line-height: 5rem;
     }
 }
