--- a/sass/components/_switch-mode.scss
+++ b/sass/components/_switch-mode.scss
@@ -7,7 +7,7 @@
     height: 1.5rem;
     border: none;
     border-radius: 1.5rem;
-    background-color: var(--middle-grey);
+    background-color: var(--bg-grey);
     @include box-shadow;
     cursor: pointer;
     transition: $short-trans ease-in-out;
