--- a/sass/layout/modales/_modal-cv.scss
+++ b/sass/layout/modales/_modal-cv.scss
@@ -1,8 +1,9 @@
 .cv-content {
     position: relative;
     display: flex;
+    height: min-content;
+    max-height: min-content;
     @include box-shadow;
-    isolation: isolate;
     @include small-screens {
         flex-direction: column;
     }
@@ -21,12 +22,13 @@
         flex-direction: column;
         gap: 2.5rem;
         width: 35%;
-        background-color: var(--text-grey);
+        background-color:var(--cv-text);
         color: var(--bg-grey);
         padding: 2rem 3rem 8rem 3rem;
         img {
             width: 100%;
             border-radius: 50%;
+            @include box-shadow;
             @include small-screens {
                 max-width: 400px;
             }
@@ -45,6 +47,7 @@
         display: flex;
         flex-direction: column;
         background-color: var(--bg-grey);
+        color:var(--cv-text);
         gap: 2rem;
         padding: 2rem 3rem 8rem 3rem;
     }
@@ -53,14 +56,5 @@
     }
     p {
         margin-bottom: 1rem;
-    }
-}
-#download-cv {
-    position: absolute;
-    top: -3rem;
-    right: -3rem;
-    @include small-screens {
-        top: -1rem;
-        right: -1rem;
     }
 }
