--- a/sass/layout/sections/_portfolio.scss
+++ b/sass/layout/sections/_portfolio.scss
@@ -1,122 +1,38 @@
 #portfolio {
-    flex-direction: row;
-    @include small-screens {
-        flex-direction: column;
-    }
+    color: var(--portfolio-text);
     .btns {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 1rem;
-        @include small-screens {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-        }
-    }
-    .project {
-        display: none;
-        gap: 3rem;
-        justify-content: flex-end;
-        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 1.5rem 0;
+        width: 80%;
         @include small-screens {
             flex-direction: column;
+            gap: 5rem;
+            width: 90%;
         }
-        &-main {
-            background-color: var(--bg-grey);
+        figcaption {
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
-            gap: 2rem;
-            width: 28%;
-            padding: 2rem;
-            margin: 0.5rem;
-            border-radius: 1.5rem;
-            @include box-shadow;
-            overflow: hidden;
-            @include small-screens {
-                width: 100%;
-            }
-            &-type {
-                margin-right: -2rem;
-                margin-left: auto;
-                padding: 0.5rem 1rem;
-                background-color: $portfolio-light;
-                color: $portfolio-dark;
-                border-radius: 5px 0 0 5px;
+            align-items: center;
+            gap: 1rem;
+            width: 25%;
+            padding: 2rem 1rem 1.5rem 1rem;
+            border-top-left-radius: 0.5rem;
+            border-top-right-radius: 0.5rem;
+            border-bottom: 0.1rem $portfolio-dark solid;
+            cursor: pointer;
+            img {
+                width: 80%;
+                border-radius: 0.2rem;
                 @include box-shadow;
             }
-            .h3 {
-                padding-bottom: 1rem;
-            }
-            &-links {
-                display: flex;
-                gap: 1rem;
-            }
-        }
-        &-switch {
-            position: relative;
-            width: 62%;
-            height: min-content;
-            border-radius: 1.5rem;
-            @include box-shadow;
-            overflow: hidden;
             @include small-screens {
                 width: 100%;
             }
-            img {
-                width: 100%;
-                border-radius: 1.5rem;
+            &:hover, &:focus {
+                border-top: 0.3rem $portfolio-dark solid;
             }
-        }
-        &-details {
-            position: absolute;
-            inset: 0;
-            display: flex;
-            flex-direction: column;
-            gap: 1.5rem;
-            padding: 2rem;
-            border-radius: 1.5rem;
-            background-color: var(--bg-grey);
-            transform-origin: center right;
-            transform: scaleX(0%);
-            transition: 250ms ease-in-out;
-            @include small-screens {
-                width: 100%;
-            }
-            &-skills {
-                position: relative;
-                display: flex;
-                flex-wrap: wrap;
-                gap: 0.2rem 1.5rem;
-                padding: 1rem 1rem 1rem 4rem;
-                border-radius: 0.5rem;
-                background-color: $portfolio-light;
-                color: $portfolio-dark;
-                border: 1px $portfolio-dark solid;
-                .icon-tools {
-                    position: absolute;
-                    top: 50%; left: 1rem;
-                    margin-top: -1rem;
-                    line-height: 2rem;
-                    text-align: center;
-                    background-color: $portfolio-dark;
-                    color: $portfolio-light;
-                }
-            }
-            p {
-                overflow: scroll;
-                -ms-overflow-style: none;
-                scrollbar-width: none;
-                &::-webkit-scrollbar {
-                    display: none;
-                }
-            }
-            &.active {
-                transform: scaleX(100%);
-            }
-        }
-        &.active {
-            display: flex;
         }
     }
 }
